<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe698"
    android:foregroundTint="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/gato_logo"
        android:layout_width="191dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_gato"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/loginBoton"
        android:layout_width="275dp"
        android:layout_height="70dp"
        android:backgroundTint="#4AF69319"
        android:fontFamily="@font/lato_regular"
        android:padding="10dp"
        android:text="@string/loginButton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="524dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/usuario"
            android:textAlignment="viewStart"
            android:textColor="#A26235"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextUsuario"
            android:layout_width="360dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/editTextUsuario"
            android:inputType="text"
            android:textColor="#A26235" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/contraseña"
            android:textAlignment="viewStart"
            android:textColor="#A26235"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextContra"
            android:layout_width="360dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/editTextContraseña"
            android:inputType="textPassword"
            android:textColor="#A26235" />
    </LinearLayout>

    <Button
        android:id="@+id/registrarBoton"
        android:layout_width="275dp"
        android:layout_height="70dp"
        android:backgroundTint="#4AF69319"
        android:fontFamily="@font/lato_regular"
        android:padding="10dp"
        android:text="@string/inicioRegistroBoton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902" />


</androidx.constraintlayout.widget.ConstraintLayout>

