<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffd991"
    tools:context=".UploadFileActivity">

    <ImageView
        android:id="@+id/gato_logo"
        android:layout_width="105dp"
        android:layout_height="91dp"
        android:layout_gravity="center"
        android:layout_marginBottom="779dp"
        android:src="@drawable/logo_gato"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progreso"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/tituloVideo"
        android:layout_width="335dp"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:fontFamily="@font/lato_regular"
        android:text="@string/subirArchivo"
        android:textAlignment="center"
        android:textColor="#A26235"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <ImageView
        android:id="@+id/previewVideo"
        android:layout_width="252dp"
        android:layout_height="253dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261" />

    <TextView
        android:id="@+id/nombreVideo"
        android:layout_width="154dp"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:fontFamily="@font/lato_regular"
        android:text="@string/tituloVideo"
        android:textAlignment="center"
        android:textColor="#A26235"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526" />

    <TextView
        android:id="@+id/descripcionVideo"
        android:layout_width="154dp"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:fontFamily="@font/lato_regular"
        android:text="@string/descripcionVideo"
        android:textAlignment="center"
        android:textColor="#A26235"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

    <Button
        android:id="@+id/seleccionarVideoBoton"
        android:layout_width="255dp"
        android:layout_height="56dp"
        android:backgroundTint="#4AF69319"
        android:fontFamily="@font/lato_regular"
        android:padding="10dp"
        android:text="@string/seleccionarBoton"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <Button
        android:id="@+id/subirButton"
        android:layout_width="218dp"
        android:layout_height="54dp"
        android:backgroundTint="#4AF69319"
        android:fontFamily="@font/lato_regular"
        android:padding="10dp"
        android:text="@string/botonSubir"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progreso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/tituloEditText"
        android:layout_width="290dp"
        android:layout_height="68dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/tituloHint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

    <EditText
        android:id="@+id/descripcionEditText"
        android:layout_width="337dp"
        android:layout_height="66dp"
        android:ems="10"
        android:fontFamily="@font/lato_regular"
        android:hint="@string/descripcionHint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <include
            layout="@layout/barra_navegacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>